# agentiam

./: .gitignore  .golangci.yml  .goreleaser.yaml  .sharemd  BLOG_POST_DRAFT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.goreleaser  HN_BLOG_POST.md  Makefile  README.md  ROADMAP.md  SECURITY.md  check.go  commit.txt  coverage  demo.tape  docker-compose.yml  go.mod  go.sum  hash.go  policies.schema.json  policies_asyncpg.yaml  policies_test.yaml  run_all.ps1  run_asyncpg_test.sh  test_agent.py  test_asyncpg.py  test_multiplexing.py  test_out.txt  test_parse.go  test_parse2.go  test_parse3.go  test_parse4.go  test_ratelimit.py  ui.go
.github/workflows/: ci.yml  release.yml
cmd/agentiam/: main.go
cmd/agentiam-cp/: main.go
cmd/agentiamctl/: main.go
demo/: .env.example  README.md  agent.py  docker-compose.yml  init.sql  policies.yaml  query_test.py  requirements.txt  userlist.txt
deploy/: attack_test.py  droplet_setup.sh  mock_agent.py  remote_agent.py  seed_neon.py
deploy/k8s/: agentiam.yaml  configmap.yaml  deployment.yaml  namespace.yaml  (+3 more)
examples/: policies_asyncpg.yaml  policies_masking.yaml  policies_test.yaml
scripts/: test_asyncpg.py  test_masking_bypass.py  test_ratelimit.py  test_webhook.py
sdk/python/agentiam/: README.md  pyproject.toml
sdk/python/agentiam/agentiam/: __init__.py  client.py  langchain.py  llamaindex.py
sdk/python/agentiam/agentiam.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/python/agentiam/examples/: langchain_demo.py
sdk/python/agentiam/tests/: test_client.py
web/: package-lock.json
(+73 files in other folders)
