[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentiam"
version = "0.1.0"
description = "Official Python SDK for AgentIAM: AI Database Proxy"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
dependencies = [
    "requests>=2.28.0",
    "SQLAlchemy>=2.0.0"
]

[project.optional-dependencies]
langchain = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.10"
]
llamaindex = [
    "llama-index>=0.10.0"
]
all = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "llama-index>=0.10.0"
]

[tool.setuptools.packages.find]
include = ["agentiam", "agentiam.*"]
